# lustre-droplet-copytool

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  TODO.md  autogen.sh  circle.yml  configure.ac  copytool_d  lustre-droplet-CDMI.profile.EXAMPLE  lustre-droplet-SPROXYD.profile.EXAMPLE  lustre-droplet.profile  run.sh
client-2.7.0-sources/usr/src/lustre-2.7.0/: META  aclocal.m4  autoMakefile.in  config.h.in  configure  lustre.spec
client-2.7.0-sources/usr/src/lustre-2.7.0/config/: Makefile.in
client-2.7.0-sources/usr/src/lustre-2.7.0/contrib/: Makefile.in
client-2.7.0-sources/usr/src/lustre-2.7.0/contrib/lbuild/: Makefile.in
client-2.7.0-sources/usr/src/lustre-2.7.0/contrib/scripts/: Makefile.in
client-2.7.0-sources/usr/src/lustre-2.7.0/ldiskfs/: autoMakefile.in
client-2.7.0-sources/usr/src/lustre-2.7.0/libcfs/: autoMakefile.in
client-2.7.0-sources/usr/src/lustre-2.7.0/libcfs/autoconf/: Makefile.in
client-2.7.0-sources/usr/src/lustre-2.7.0/libcfs/include/: Makefile.in
client-2.7.0-sources/usr/src/lustre-2.7.0/libcfs/libcfs/: .kernel_user_comm.c.swp  autoMakefile.in
client-2.7.0-sources/usr/src/lustre-2.7.0/lnet/: autoMakefile.in
client-2.7.0-sources/usr/src/lustre-2.7.0/lnet/autoconf/: Makefile.in
client-2.7.0-sources/usr/src/lustre-2.7.0/lnet/doc/: Makefile.in
client-2.7.0-sources/usr/src/lustre-2.7.0/lnet/include/: Makefile.in
client-2.7.0-sources/usr/src/lustre-2.7.0/lnet/klnds/: autoMakefile.in
client-2.7.0-sources/usr/src/lustre-2.7.0/lustre/: autoMakefile.in
client-2.7.0-sources/usr/src/lustre-2.7.0/lustre-iokit/: Makefile.in
client-2.7.0-sources/usr/src/lustre-2.7.0/snmp/: Makefile.in
include/: cpt_msgs.h  cpt_opt.h  trace.h
include/cpt/: cpt_msgs.h  cpt_opt.h
include/lustre/: lustre_ver.h
include/msgs/: trace.h
srcs/: .gitignore  lhsmtool_scality.c  main.c
srcs/msgs/: trace.c  usage.c
(+65 files in other folders)
